[project]
name = "coverage-app"
version = "0.1.0"
description = "Fast async radio-coverage calculator"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version="^0.29"}
geopandas = "^0.14"
shapely = ">=1.8"
folium = "^0.16"
branca = "^0.7"
httpx = "^0.27"
rasterio = "^1.4"
numpy = "^1.26"
pandas = "^2.2"
orjson = "^3.10"

[project.optional-dependencies]
gdal = "^3.9"            # нужен только для radio_server
tqdm = "^4.66"

[tool.poetry.scripts]
coverage-cli = "coverage_app.cli.coverage_cli:app"
serve-ui      = "coverage_app.api.main:start_ui"
serve-radio   = "coverage_app.core.radio_server:start_server"
